[package]
name = "map_box"
version = "0.2.1"
edition = "2021"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>"]
description = "Map the value in a Box, re-using the allocation when possible."
keywords = ["map", "box"]
license = "MIT"
repository = "https://github.com/JonathanBrouwer/map_box"

